src/interpreter/snapshots/inlyne__interpreter__tests__blockquote.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n> blockquote\n\n\n --- html\n\n<blockquote>\n<p>blockquote</p>\n</blockquote>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            indent: 50.0,
            is_quote_block: Some(1),
            texts: [
                Text {
                    text: "blockquote",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
