src/interpreter/snapshots/inlyne__interpreter__tests__centered_image_with_size_align_and_link.snap
---
source: src/interpreter/tests.rs
description: "\n<p align=\"center\">\n  <a href=\"https://bun.sh\"><img src=\"http://127.0.0.1:41253/bun_logo.png\" alt=\"Logo\" height=170></a>\n</p>"
expression: interpret_md(&text)
---
[
    Image(
        Image {
            image_data: Mutex {
                data: Some(
                    ImageData {
                        lz4_blob: { len: 21244, data: [4, 34, 77, ..] },
                        scale: true,
                        dimensions: (396, 347),
                    },
                ),
                poisoned: false,
                ..
            },
            is_aligned: Some(Center),
            size: Some(PxHeight(Px(170))),
            is_link: Some("https://bun.sh"),
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
