src/interpreter/snapshots/inlyne__interpreter__tests__code_block_bg_color.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n```\nFenced code block with no language tag\n```\n\n```rust\n// Rust code\nfn main() {}\n```\n\n --- html\n\n<pre style=\"background-color:#f6f8fa;\"><code><span style=\"color:#333333;\">Fenced code block with no language tag\n</span></code></pre>\n<pre style=\"background-color:#f6f8fa;\"><code class=\"language-rust\"><span style=\"color:#969896;\">// Rust code\n</span><span style=\"color:#a71d5d;\">fn </span><span style=\"color:#795da3;\">main</span><span style=\"color:#333333;\">() {}\n</span></code></pre>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            background_color: Some(Color { r: 0.92, g: 0.94, b: 0.96 }),
            is_code_block: true,
            texts: [
                Text {
                    text: "Fenced code block with no language tag",
                    font_family: Monospace,
                    color: Some(Color { r: 0.03, g: 0.03, b: 0.03 }),
                    ..
                },
                Text {
                    text: "\n",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            background_color: Some(Color { r: 0.92, g: 0.94, b: 0.96 }),
            is_code_block: true,
            texts: [
                Text {
                    text: "// Rust code",
                    font_family: Monospace,
                    color: Some(Color { r: 0.30, g: 0.31, b: 0.30 }),
                    ..
                },
                Text {
                    text: "\n",
                    default_color: Color(BLACK),
                    ..
                },
                Text {
                    text: "fn ",
                    font_family: Monospace,
                    color: Some(Color { r: 0.39, g: 0.01, b: 0.11 }),
                    ..
                },
                Text {
                    text: "main",
                    font_family: Monospace,
                    color: Some(Color { r: 0.19, g: 0.11, b: 0.37 }),
                    ..
                },
                Text {
                    text: "() {}",
                    font_family: Monospace,
                    color: Some(Color { r: 0.03, g: 0.03, b: 0.03 }),
                    ..
                },
                Text {
                    text: "\n",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
