src/interpreter/snapshots/inlyne__interpreter__tests__code_in_ordered_list.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n1. 1st item\n\n    ```rust\n    fn main() {}\n    ```\n\n2. 2nd item\n\n\n --- html\n\n<ol>\n<li>\n<p>1st item</p>\n<pre style=\"background-color:#f6f8fa;\"><code class=\"language-rust\"><span style=\"color:#a71d5d;\">fn </span><span style=\"color:#795da3;\">main</span><span style=\"color:#333333;\">() {}\n</span></code></pre>\n</li>\n<li>\n<p>2nd item</p>\n</li>\n</ol>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "1. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "1st item",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            background_color: Some(Color { r: 0.92, g: 0.94, b: 0.96 }),
            is_code_block: true,
            texts: [
                Text {
                    text: "fn ",
                    font_family: Monospace,
                    color: Some(Color { r: 0.39, g: 0.01, b: 0.11 }),
                    ..
                },
                Text {
                    text: "main",
                    font_family: Monospace,
                    color: Some(Color { r: 0.19, g: 0.11, b: 0.37 }),
                    ..
                },
                Text {
                    text: "() {}\n",
                    font_family: Monospace,
                    color: Some(Color { r: 0.03, g: 0.03, b: 0.03 }),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "2. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "2nd item",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
