src/interpreter/snapshots/inlyne__interpreter__tests__footnotes_list_prefix.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\nThis sentence[^1] has two footnotes[^2]\n\n[^1]: 1st footnote\n[^2]: 2nd footnote\n\n --- html\n\n<p>This sentence<sup class=\"footnote-ref\"><a href=\"#fn-1\" id=\"fnref-1\" data-footnote-ref>1</a></sup> has two footnotes<sup class=\"footnote-ref\"><a href=\"#fn-2\" id=\"fnref-2\" data-footnote-ref>2</a></sup></p>\n<section class=\"footnotes\" data-footnotes>\n<ol>\n<li id=\"fn-1\">\n<p>1st footnote <a href=\"#fnref-1\" class=\"footnote-backref\" data-footnote-backref aria-label=\"Back to content\">↩</a></p>\n</li>\n<li id=\"fn-2\">\n<p>2nd footnote <a href=\"#fnref-2\" class=\"footnote-backref\" data-footnote-backref aria-label=\"Back to content\">↩</a></p>\n</li>\n</ol>\n</section>\n"
expression: interpret_md(text)
---
[
    TextBox(
        TextBox {
            is_anchor: Some("#fnref-2"),
            texts: [
                Text {
                    text: "This sentence",
                    default_color: Color(BLACK),
                },
                Text {
                    text: "1",
                    color: Some(Color { r: 0.09, g: 0.13, b: 1.00 }),
                    link: Some("#fn-1"),
                },
                Text {
                    text: " has two footnotes",
                    default_color: Color(BLACK),
                },
                Text {
                    text: "2",
                    color: Some(Color { r: 0.09, g: 0.13, b: 1.00 }),
                    link: Some("#fn-2"),
                },
            ],
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            is_anchor: Some("#fn-1"),
            texts: [
                Text {
                    text: "1. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                },
                Text {
                    text: "1st footnote ",
                    default_color: Color(BLACK),
                },
                Text {
                    text: "↩",
                    color: Some(Color { r: 0.09, g: 0.13, b: 1.00 }),
                    link: Some("#fnref-1"),
                },
            ],
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            is_anchor: Some("#fn-2"),
            texts: [
                Text {
                    text: "2. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                },
                Text {
                    text: "2nd footnote ",
                    default_color: Color(BLACK),
                },
                Text {
                    text: "↩",
                    color: Some(Color { r: 0.09, g: 0.13, b: 1.00 }),
                    link: Some("#fnref-2"),
                },
            ],
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
