src/interpreter/snapshots/inlyne__interpreter__tests__handles_comma_in_info_str.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n```rust,ignore\nlet v = 1;\n```\n\n\n --- html\n\n<pre style=\"background-color:#f6f8fa;\"><code class=\"language-rust,ignore\"><span style=\"color:#a71d5d;\">let</span><span style=\"color:#333333;\"> v </span><span style=\"color:#a71d5d;\">= </span><span style=\"color:#0086b3;\">1</span><span style=\"color:#333333;\">;\n</span></code></pre>\n"
expression: interpret_md(text)
---
[
    TextBox(
        TextBox {
            background_color: Some(Color { r: 0.92, g: 0.94, b: 0.96 }),
            is_code_block: true,
            texts: [
                Text {
                    text: "let",
                    font_family: Monospace,
                    color: Some(Color { r: 0.39, g: 0.01, b: 0.11 }),
                    ..
                },
                Text {
                    text: " v ",
                    font_family: Monospace,
                    color: Some(Color { r: 0.03, g: 0.03, b: 0.03 }),
                    ..
                },
                Text {
                    text: "= ",
                    font_family: Monospace,
                    color: Some(Color { r: 0.39, g: 0.01, b: 0.11 }),
                    ..
                },
                Text {
                    text: "1",
                    font_family: Monospace,
                    color: Some(Color { r: 0.00, g: 0.24, b: 0.45 }),
                    ..
                },
                Text {
                    text: ";",
                    font_family: Monospace,
                    color: Some(Color { r: 0.03, g: 0.03, b: 0.03 }),
                    ..
                },
                Text {
                    text: "\n",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
