src/interpreter/snapshots/inlyne__interpreter__tests__horizontal_ruler.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\nhorizontal ruler vv\n\n---\n\n\n --- html\n\n<p>horizontal ruler vv</p>\n<hr />\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            texts: [
                Text {
                    text: "horizontal ruler vv",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        VisibleSpacer(5),
    ),
]
