src/interpreter/snapshots/inlyne__interpreter__tests__image_loading_fails_gracefully.snap
---
source: src/interpreter/tests.rs
description: "![This actually returns JSON 😈](http://127.0.0.1:40155/2/snapshot.png)"
expression: "interpret_md_with_opts(&text, opts)"
---
[
    Row(
        Row {
            elements: [
                Positioned {
                    inner: Image(
                        Image {
                            image_data: Mutex {
                                data: Some(
                                    ImageData {
                                        pixels: { len: 4536, data: [Rgba(a1, a0, a1, ff), Rgba(a0, 9f, a0, ff), Rgba(a0, 9f, a0, ff), ..] },
                                        scale: false,
                                        dimensions: (63, 72),
                                    },
                                ),
                            },
                            is_aligned: Some(Left),
                            ..
                        },
                    ),
                    bounds: None,
                },
            ],
            hidpi_scale: 1.0,
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
