src/interpreter/snapshots/inlyne__interpreter__tests__kbd_tag.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\nKeyboard text: <kbd>Alt-\\<num\\></kbd>\n\n\n --- html\n\n<p>Keyboard text: <kbd>Alt-&lt;num&gt;</kbd></p>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            texts: [
                Text {
                    text: "Keyboard text: ",
                    default_color: Color(BLACK),
                    ..
                },
                Text {
                    text: "Alt-",
                    font_family: Monospace,
                    color: Some(Color(BLACK)),
                    ..
                },
                Text {
                    text: "<",
                    font_family: Monospace,
                    color: Some(Color(BLACK)),
                    ..
                },
                Text {
                    text: "n",
                    font_family: Monospace,
                    color: Some(Color(BLACK)),
                    ..
                },
                Text {
                    text: "um",
                    font_family: Monospace,
                    color: Some(Color(BLACK)),
                    ..
                },
                Text {
                    text: ">",
                    font_family: Monospace,
                    color: Some(Color(BLACK)),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
