src/interpreter/snapshots/inlyne__interpreter__tests__let_is_italicized.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n```rust\nlet foo;\n```\n\n --- html\n\n<pre style=\"background-color:#282a36;\"><code class=\"language-rust\"><span style=\"font-style:italic;color:#8be9fd;\">let</span><span style=\"color:#f8f8f2;\"> foo;\n</span></code></pre>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            background_color: Some(Color { r: 0.02, g: 0.02, b: 0.04 }),
            is_code_block: true,
            texts: [
                Text {
                    text: "let",
                    font_family: Monospace,
                    color: Some(Color { r: 0.26, g: 0.81, b: 0.98 }),
                    style: ITALIC ,
                    ..
                },
                Text {
                    text: " foo;",
                    font_family: Monospace,
                    color: Some(Color { r: 0.94, g: 0.94, b: 0.89 }),
                    ..
                },
                Text {
                    text: "\n",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
